# hermes

./: .gitignore  RFC.md  bacon.toml  cargo.toml  hermes.code-workspace
.cargo/: config.toml
dens/: Cargo.toml  README.md
dens/.cargo/: config.toml
dens/src/: deterministic_rand.rs  error.rs  host.rs  lib.rs  net.rs  os_mock.rs  sim.rs
dens/src/host/: net.rs  os_shim.rs
dens/src/host/net/: udp.rs
dens/src/net/: checksum.rs  error.rs  ip.rs  nat.rs  udp.rs
dens/src/net/ip/: generator.rs  nat.rs  network.rs
dens/src/net/ip/nat/: map.rs
dens/src/net/ip/nat/map/: edn_nat.rs  ein_nat.rs  firewall.rs  hard.rs  router.rs
dens/src/net/ip/nat/map/easy/: full_cone.rs  port_restricted_cone.rs  restricted_cone.rs
dens/src/net/ip/nat/map/hard/: symmetric.rs
dens/src/net/nat/: map.rs
dens/src/net/nat/map/: easy.rs  router.rs
dens/src/net/nat/map/hard/: symmetric.rs
dens/src/os_mock/: net.rs
dens/src/os_mock/net/: addr.rs  dns.rs  udp.rs
dens/src/sim/: config.rs  machine.rs
earth/: Cargo.toml
end-to-end-test/: Cargo.toml
end-to-end-test/src/: config.rs  deterministic_rand.rs  error.rs  host.rs  ip.rs  lib.rs  net.rs  sim.rs  udp.rs
end-to-end-test/src/host/: io.rs  net.rs  os_shim.rs
end-to-end-test/src/host/io/: interest.rs  ready.rs
end-to-end-test/src/host/net/: addr.rs  dns.rs  macros.rs  udp.rs
end-to-end-test/src/net/: ip.rs  udp.rs
end-to-end-test/src/net/ip/: generator.rs  network.rs
end-to-end-test/src/sim/: config.rs  machine.rs
kademlia/: Cargo.toml
kademlia/src/: client.rs  helpers.rs  id.rs  lib.rs  node_cache.rs  prelude.rs  routing_table.rs  rpc.rs  rpc_test.rs  traits.rs
kademlia/src/id/: distance.rs  logging.rs
kademlia/src/node_cache/: kademlia.rs
kademlia/src/routing_table/: bucket_list.rs  leaf.rs  siblings_list.rs  tree.rs
kademlia/src/routing_table/tree/: bucket.rs  leaf.rs
max-sized-vec/: Cargo.toml
max-sized-vec/src/: lib.rs
maxlen/: Cargo.toml
maxlen-derive/: Cargo.toml  MIGRATION.md  README.md
maxlen-derive/examples/: usage.rs
maxlen-derive/src/: lib.rs
maxlen-derive/tests/: test_derive.rs
maxlen/src/: lib.rs
proxy-ring/: Cargo.toml
rfc/: dos-prevention.md  earth.md  sky.md  trust-system.md  underworld.md
rpc/: Cargo.toml
rpc/src/: example.rs  in_memory_transport.rs  lib.rs  state_machine_transitions.rs  tests.rs  traits.rs  transport.rs  wrappers.rs
rpc/src/state_machine_transitions/: concurrent_request_handler.rs  tests.rs
rpc/src/traits/: call.rs  message.rs  method.rs
rpc/src/transport/: bi_stream.rs  caller.rs  conn.rs  in_memory_transport.rs  replier.rs  streams.rs
rpc/src/wrappers/: client_conn.rs  server_conn.rs
schema/: Cargo.toml
schema/src/: earth_node.rs  lib.rs  ping.rs  sky_node.rs
schema/src/earth_node/: candidate.rs
schema/src/earth_node/message/: hour.rs
schema/src/sky_node/: rpc.rs
schema/src/sky_node/rpc/: earth_to_sky.rs  lookup.rs
shared-schema/: Cargo.toml
shared-schema/src/: earth_node.rs  lib.rs  node.rs  ping.rs  sky_node.rs
shared-schema/src/earth_node/: message.rs  rpc.rs
shared-schema/src/earth_node/message/: hour.rs
shared-schema/src/earth_node/rpc/: sky_to_earth.rs
shared-schema/src/node/: authenticate.rs
shared-schema/src/sky_node/: rpc.rs
shared-schema/src/sky_node/rpc/: earth_to_sky.rs
sky/: Cargo.toml  RFC.md  build.rs
sky/schema/: sky.capnp  sky.fbs  sky.proto
sky/src/: api.rs  capnp_types.rs  client.rs  dirs.rs  error.rs  get_public_ip.rs  get_system_time.rs  kad_test.rs  lib.rs  listener.rs  main.rs  no_cert_verification.rs  node.rs  quinn.rs  quinn_transport.rs  request_handler.rs  server.rs  tokio_uptime.rs
sky/src/api/: earth_root.rs  entrypoint.rs  find_nodes.rs  find_nodes_method.rs  sky_root.rs
sky/src/api/earth_root/: register.rs
sky/src/api/earth_root/register/: join.rs  nearby.rs  renew.rs
sky/src/api/entrypoint/: as_earth.rs  as_sky.rs
sky/src/api/find_nodes/: kad_handler.rs  kad_manager.rs
sky/src/api/find_nodes_method/: kad_handler.rs
sky/src/capnp_types/: addr.rs  id.rs  ip.rs  node.rs  rpc.rs
sky/src/capnp_types/rpc/: peer_request.rs
sky/src/client/: cache.rs  sky_or_earth.rs
sky/src/quinn/: end_to_end_socket.rs  skip_server_verification.rs
sky/src/quinn_transport/: end_to_end_socket.rs
sky/src/request_handler/: find_nodes_method.rs  root_request.rs
sky/src/request_handler/find_nodes_method/: kad_handler.rs
