[package]
name = "end-to-end-test"
version = "0.1.0"
edition = "2024"


[dependencies]
arrayvec = "0.7.6"
binary_serde = { version = "1.0.25", features = ["std"] }
bytes = "1.11.0"
quinn-udp = "0.5.14"
rand = "0.9.2"
scoped-tls = "1.0.1"
thiserror = "2.0.18"
tracing = "0.1.44"
getrandom = { version = "0.2.12" }
tokio = { version = "1.49.0", features = ["rt", "sync", "test-util", "time"] }
ip_network_table = "0.2.0"
ip_network = "0.4.1"
rand_distr = "0.5.1"

[features]
default = ["net", "io-util"]
net = []
io-util = []
