[package]
name = "kademlia"
version = "0.1.0"
edition = "2024"

[dependencies]
expect-test = "1.5.1"
futures = "0.3.31"
futures-time = "3.0.0"
ringbuffer = "0.16.0"
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
tokio = { version = "1.47.1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
tracing-test = "0.2.5"
