[package]
name = "kademlia"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
arrayvec = "0.7.6"
expect-test = "1.5.1"
futures = "0.3.31"
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tracing-test = "0.2.5"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[profile.release]
debug = true
