[package]
name = "kademlia"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
arrayvec = "0.7.6"
futures = "0.3.31"
minicbor = { version = "2.1.3", features = [
    "alloc",
    "std",
    "derive",
], optional = true }
rand = "0.9.2"
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.41"


[dev-dependencies]
expect-test = "1.5.1"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tracing-test = "0.2.5"

[features]
minicbor = ["dep:minicbor"]

[profile.release]
debug = true
