[package]
name = "maxlen-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
minicbor = { version = "2.1.3", features = ["alloc", "std", "derive"] }
maxlen = { version = "0.1.0", path = "../maxlen" }
