[package]
name = "maxlen"
version = "0.1.0"
edition = "2024"

[dependencies]
minicbor = { version = "2.1.3", features = ["alloc", "std"] }
maxlen-derive = { version = "0.1.0", path = "../maxlen-derive", optional = true }
tracing = "0.1.44"

[features]
default = ["derive"]
derive = ["maxlen-derive"]
