[package]
name = "rpc"
version = "0.1.0"
edition = "2024"
[dependencies]
bytes = "1.11.1"
futures = { version = "0.3.32", features = ["alloc", "std"] }
futures-io = "0.3.32"
maxlen = { version = "0.1.0", path = "../maxlen" }
minicbor = "2.2.1"
minicbor-io = { version = "0.23.0", features = ["async-io"] }
quic-rpc = "0.20.0"
quinn = { version = "0.11.9", default-features = false, optional = true, features = ["futures-io"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", default-features = false }


[features]
default = ["quinn"]
quinn = ["dep:quinn"]

[dev-dependencies]
anyhow = "1.0.102"
derive_more = { version = "2.1.1", features = ["from", "try_into"] }
minicbor-derive = "0.19.3"
quic-rpc = "0.20.0"
serde = "1.0.228"
