[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = "0.6.1"
kademlia = { version = "0.1.0", path = "../kademlia", features = ["minicbor", "maxlen"] }
maxlen = { version = "0.1.0", path = "../maxlen" }
maxlen-derive = { version = "0.1.0", path = "../maxlen-derive" }
minicbor = { version = "2.1.3", features = ["alloc", "std", "derive"] }
sha2 = "0.10.9"

[dev-dependencies]
expect-test = "1.5.1"
