[package]
name = "shared-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
crypto-bigint = "0.6.1"
kademlia = { version = "0.1.0", path = "../kademlia", features = ["minicbor", "maxlen"] }
maxlen = { version = "0.1.0", path = "../maxlen" }
maxlen-derive = { version = "0.1.0", path = "../maxlen-derive" }
minicbor = { version = "2.1.3", features = ["alloc", "std", "derive"] }
quic-rpc = { version = "0.20.0", default-features = false }
rpc = { version = "0.1.0", path = "../rpc" }
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["time"] }
tracing = "0.1.44"

[dev-dependencies]
expect-test = "1.5.1"
