[package]
name = "sky"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["net", "rt", "time"] }
tracing = "0.1.41"
capnp = "0.21"
capnp-futures = "0.21.0"
crypto = { version = "0.5.1", features = ["digest"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
futures-util = "0.3.31"
thiserror = "2.0.16"
kademlia = { version = "0.1.0", path = "../kademlia" }
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
flatbuffers = "25.12.19"
minicbor-derive = { version = "0.18.3", features = ["alloc", "std"] }
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "pem", "ring"] }
quinn = { version = "0.11.9", default-features = false, features = ["ring", "bloom", "log", "platform-verifier", "runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
public-ip = "0.2.2"
stun = "0.17.1"
etcetera = "0.11.0"
schema = { version = "0.1.0", path = "../schema" }
minicbor = "2.2.1"

[build-dependencies]
capnpc = "0.21"
prost-build = "0.14.3"

[dev-dependencies]
expect-test = "1.5.1"
tracing-test = "0.2.6"
turmoil = "0.6.6"
