[package]
name = "sky"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["net", "rt", "time", "test-util"] }
tracing = "0.1.41"
capnp = "0.21"
capnp-futures = "0.21.0"
crypto = { version = "0.5.1", features = ["digest"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
futures-util = "0.3.31"
thiserror = "2.0.16"
kademlia = { version = "0.1.0", path = "../kademlia" }
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"] }
flatbuffers = "25.12.19"
minicbor-derive = { version = "0.18.3", features = ["alloc", "std"] }
rcgen = { version = "0.14.7", default-features = false, features = ["crypto", "pem", "ring"] }
quinn = { version = "0.11.9", default-features = false, features = ["ring", "bloom", "platform-verifier", "log", "runtime-tokio", "rustls-ring", "futures-io"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
public-ip = "0.2.2"
stun = "0.17.1"
etcetera = "0.11.0"
shared-schema = { version = "0.1.0", path = "../shared-schema" }
minicbor = "2.2.1"
minicbor-io = { version = "0.23.0", features = ["async-io"] }
rpc = { version = "0.1.0", path = "../rpc" }
futures-io = "0.3.32"
maxlen = { version = "0.1.0", path = "../maxlen" }
end-to-end-test = { version = "0.1.0", path = "../end-to-end-test" }
rand = "0.9.2"
quinn-proto = "0.11.14"
env_logger = "0.11.9"

[build-dependencies]
capnpc = "0.21"
prost-build = "0.14.3"

[dev-dependencies]
expect-test = "1.5.1"
test-log = { version = "0.2.19", default-features = false, features = ["color","trace"] }
tracing-subscriber = "0.3.23"



turmoil = "0.6.6"
